Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -547,7 +547,68 @@ $ ls -l test.sh
 `umask`
 >Запрашивает или установливает маску прав доступа по умолчанию для файлов и каталогов.
 
+
 # Ответы на упражнения для закрепления
 
+1. Создайте каталог с именем `emptydir`, используя команду `mkdir emptydir`. Теперь, используя `ls`, выведите список разрешений для каталога emptydir.
+
+Добавьте параметр -d к ls, чтобы видеть атрибуты файла каталога, а не выводить его содержимое. Итак, ответ такой:
+```
+ls -l -d emptydir
+```
+Команда станет короче, если вы объедините два параметра в один, `ls -ld emptydir`.
+
+2. Создайте пустой файл с именем `emptyfile` с помощью команды `touch emptyfile`. Теперь, используя `chmod` в символьном режиме, добавьте разрешения на выполнение для владельца файла `emptyfile` и удалите права доступа на запись и выполнение для всех остальных. Сделайте это, используя только одну команду chmod.
+
+Подумайте об этом таким образом:
+* «Для пользователя, владеющего файлом (`u`), добавьте (`+`) права на выполнение (`x`)», поэтому `u+x`.
+* «Для группы (`g`) и других пользователей (`o`) удалите (`-`) права на запись (`w`) и выполнение (`x`)», так что `go-wx`.
+
+Чтобы объединить эти два набора разрешений, мы добавляем между ними запятую. Итак, окончательный результат:
+```
+chmod u+x,go-wx emptyfile
+```
+
+3. Какими будут разрешения по умолчанию для файла, если значение `umask` установлено на `020`?
+
+Разрешения будут rw-r-----
+
+4. Предположим, файл с именем `test.sh` является сценарием оболочки со следующими разрешениями и владельцем: 
+```
+-rwxr-sr-x 1 carol root     33 Dec 11 10:36 test.sh
+```
+* Какие разрешения у владельца файла?
+
+Разрешения для владельца (со 2-го по 4-й символы в выводе `ls -l`) - это `rwx`, поэтому ответ: «читать, записывать и выполнять файл».
+
+* Используя восьмеричную нотацию, каков будет синтаксис `chmod`, чтобы «отменить» специальное разрешение, предоставленное этому файлу?
+
+Мы можем «отменить» особые разрешения, передав 4-ю цифру, `0`, в `chmod`. Текущие права доступа - `755`, поэтому команда должна быть `chmod 0755`.
+
+5. Рассмотрим этот файл:
+```
+$ ls -l /dev/sdb1
+brw-rw---- 1 root disk 8, 17 Dec 21 18:51 /dev/sdb1
+```
+Какой тип файла - `sdb1`? Кто может писать в этот файл?
+
+Первый символ в выводе `ls -l` показывает тип файла. `b` - блочное устройство, обычно диск (внутренний или внешний), подключенный к машине. Владелец (`root`) и любые пользователи группового диска могут писать на него.
+
+6. Рассмотрим следующие 4 файла:
+```
+drwxr-xr-t 2 carol carol 4,0K Dec 20 18:46 Another_Directory
+----r--r-- 1 carol carol    0 Dec 11 10:55 foo.bar
+-rw-rw-r-- 1 carol carol 1,2G Dec 20 18:22 HugeFile.zip
+drwxr-sr-x 2 carol users  4,0K Jan 18 17:26 Sample_Directory
+```
+Запишите соответствующие разрешения для каждого файла и каталога в восьмеричном режиме с использованием 4-значного обозначения.
+
+`Another_Directory` - `1755`. `1` для липкого бита, `755` для обычных прав доступа ('rwx' для пользователя, 'r-x' для группы и остальных пользователей).
+
+`foo.bar` - `0044`. Никаких специальных прав доступа (первая цифра - `0`), никаких прав для пользователя (`---`) и только чтение (`r— r--`) для группы и остальных пользователей.
+
+`HugeFile.zip` - `0664`. Никаких специальных прав доступа, поэтому первая цифра - `0`. `6` (`rw-`) для пользователя и группы, `4` (`r-`) для остальных пользователей.
+
+`Sample_Directory` - `2755`. `2` для бита SGID, `7` (`rwx`) для пользователя, `5` (`r-x`) для группы и остальных пользователей.
 
 # Ответы на упражнения для размышления
