Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -611,4 +611,79 @@ drwxr-sr-x 2 carol users  4,0K Jan 18 17:26 Sample_Directory
 
 `Sample_Directory` - `2755`. `2` для бита SGID, `7` (`rwx`) для пользователя, `5` (`r-x`) для группы и остальных пользователей.
 
+
 # Ответы на упражнения для размышления
+
+1. Попробуйте это на терминале: создайте пустой файл с именем `emptyfile` с помощью команды `touch emptyfile`. Теперь «обнулите» права доступа к файлу с `chmod 000 emptyfile`. Что произойдет, если вы измените разрешения для `emptyfile`, передав только *одно* значение для `chmod` в восьмеричном режиме, например `chmod 4 emptyfile`? А если использовать два, как в `chmod 44 emptyfile`? Что мы можем узнать о том, как `chmod` считывает числовое значение?
+
+Помните, что мы «обнулили» права для `emptyfile`. Итак, его начальное состояние будет:
+```
+---------- 1 carol carol    0 Dec 11 10:55 emptyfile
+```
+Теперь давайте попробуем первую команду `chmod 4 emptyfile`:
+```
+$ chmod 4 emptyfile
+$ ls -l emptyfile
+-------r-- 1 carol carol 0 Dec 11 10:55 emptyfile
+```
+Видите? Права доступа к файлу для остальных пользователей были изменены. А что, если мы попробуем две цифры, как в `chmod 44` emptyfile?
+```
+$ chmod 44 emptyfile
+$ ls -l emptyfile
+----r--r-- 1 carol carol 0 Dec 11 10:55 emptyfile
+```
+Теперь были затронуты права доступа для группы и остальных пользователей. Из этого можно сделать вывод, что в восьмеричном режиме `chmod` считывает значение «в обратном порядке», от младшего разряда (*others*) до самого старшего (*user*). Если вы передадите одну цифру, вы измените разрешения для *others*. Двумя цифрами вы изменяете права доступа для группы владельцев и остальных пользователей, а тремя вы изменяете пользователя, группу пользователей и остальных пользователей, а четырьмя цифрами вы изменяете пользователя, группу пользователей, остальных пользователей и специальные права доступа.
+
+2. Рассмотрим права доступа для временного каталога в системе Linux, `/tmp`:
+```
+$ ls -l /tmp
+drwxrwxrwt  19 root root  16K Dec 21 18:58 tmp
+```
+Пользователь, группа и другие имеют полные права доступа. Но может ли обычный пользователь удалить какие-либо файлы внутри этого каталога? Почему так?
+
+`/tmp` - это то, что мы называем всемирным каталогом с возможностью записи, что означает, что любой пользователь может писать в него. Но мы не хотим, чтобы один пользователь вмешивался в файлы, созданные другими, поэтому установлен липкий бит(на что указывает буква t в правай достпа к файлу для остальных пользователей). Это означает, что пользователь может удалять файлы в `/tmp`, но только те, владельцем которых он является.
+
+3. Файл с именем `test.sh` имеет следующие разрешения: `-rwsr-xr-x`, что означает, что бит SUID установлен. Теперь выполните следующие команды:
+```
+$ chmod u-x test.sh
+$ ls -l test.sh
+-rwSr-xr-x 1 carol carol 33 Dec 11 10:36 test.sh
+```
+Что мы сделали? Что означает заглавная буква `S`?
+
+Мы удалили права на выполнение для пользователя, владеющего файлом. `s` (или `t`) заменяет `x` в результате вывода `ls -l`, поэтому системе нужен способ показать, есть ли у пользователя права на выполнение или нет. Это достигается путем изменения регистра специального символа.
+
+Строчная буква `s` в первой группе прав доступа означает, что пользователь, владеющий файлом, имеет разрешения на выполнение и что бит SUID установлен. Прописная буква `S` означает, что у пользователя, владеющего файлом, отсутствуют (`-`) права на выполнение и что бит SUID установлен.
+
+То же самое можно сказать и о SGID: строчная буква `s` во второй группе разрешений означает, что группа, владеющая файлом, имеет права доступа к файлу на выполнение и что бит SGID установлен. Прописная буква `S` означает, что группе, владеющей файлом, не хватает (`-`) прав доступа к файлу на выполнение и что бит SGID установлен.
+
+Это также верно для липкого бита, представленного буквой `t` в третьей группе прав доступа. Строчная буква `t` означает установленный липкий бит и что у остальных пользователей есть права на выполнение. Прописная буква `T` означает установленный липкий бит и что у остальных пользователей нет прав на выполнение.
+
+4. Как бы вы создали каталог с именем `Box`, где все файлы автоматически принадлежат пользователям группы и могут быть удалены только пользователем, который их создал?
+
+Это многоэтапный процесс. Первый шаг - создать каталог:
+```
+$ mkdir Box
+```
+Мы хотим, чтобы владельцем на каждый файл, созданный внутри этого каталога, автоматически назначался группе пользователей. Мы можем сделать это, установив эту группу в качестве владельца каталога, а затем установив для нее бит SGID. Нам также необходимо убедиться, что любой член группы может писать в этот каталог.
+
+Поскольку нас не интересуют права доступа к файлу для остальных пользователей и мы хотим «перевернуть» только специальные биты, имеет смысл использовать символьный режим: 
+```
+$ chown :users Box/
+$ chmod g+wxs Box/
+```
+Обратите внимание: если ваш текущий пользователь не принадлежит к группе `users`, вам нужно будет использовать команду `sudo` перед приведенными выше командами, чтобы внести изменения от имени пользователя `root`.
+
+Теперь, на последнем этапе, сделаем так, что только пользователь, который создал файл, может удалить его. Это делается путем установки липкого бита (обозначенного буквой `t`) в каталоге. Помните, что он установлен в разрешениях для остальных пользователей (`o`).
+```
+$ chmod o+t Box/
+```
+Права доступа к каталогу Box должны быть следующими:
+```
+drwxrwsr-t 2 carol users  4,0K Jan 18 19:09 Box
+```
+Естественно, вы можете указать SGID и липкий бит, используя только одну команду `chmod`:
+```
+$ chmod g+wxs,o+t Box/
+```
+Поздравляем, если вы подумали об этом.
