Update 104.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
@@ -11,3 +11,12 @@
 # Введение
 
 В Linux все обрабатывается как файл. Однако некоторые файлы обрабатываются особым образом либо из-за места, в котором они хранятся, например, временные файлы, либо из-за того, как они взаимодействуют с файловой системой, например, ссылки. В этом уроке вы узнаете, где находятся такие файлы, как они работают и как ими управлять.
+
+
+# Временные файлы
+
+Временные файлы - это файлы, используемые программами для хранения данных, которые необходимы только на короткое время. Это могут быть данные о запущенных процессах, журналы сбоев, временные файлы из автосохранения, промежуточные файлы, используемые во время преобразования файлов, файлы кеша и т. д.
+
+## Расположение временных файлов
+
+Версия 3.0 стандарта иерархии файловой системы (FHS) определяет стандартные расположения временных файлов в системах Linux. Каждое расположение имеет различное назначение и поведение, и разработчикам рекомендуется следовать соглашениям, установленным FHS, при записи временных данных на диск.
