Update 104.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
@@ -20,3 +20,41 @@
 ## Расположение временных файлов
 
 Версия 3.0 стандарта иерархии файловой системы (FHS) определяет стандартные расположения временных файлов в системах Linux. Каждое расположение имеет различное назначение и поведение, и разработчикам рекомендуется следовать соглашениям, установленным FHS, при записи временных данных на диск.
+
+`/tmp`
+>Согласно FHS, программы не должны предполагать, что файлы, записанные здесь, будут сохранены между вызовами программы. Рекомендуется очистить этот каталог (удалить все файлы) во время загрузки системы, хотя это не обязательно.
+
+`/var/tmp`
+>Другое место для временных файлов, но его не следует очищать во время загрузки системы. Файлы, хранящиеся здесь, обычно сохраняются между перезагрузками.
+
+`/run`
+>Этот каталог содержит данные переменных времени выполнения, используемые запущенными процессами, например файлы идентификаторов процессов (`.pid`). Программы, которым требуется более одного файла времени выполнения, могут создавать здесь подкаталоги. Это место необходимо очистить во время загрузки системы. Назначение этого каталога когда-то выполнялось `/var/run`, а в некоторых системах `/var/run` может быть символической ссылкой на `/run`.
+
+## Права доступа на временные файлы
+
+Наличие общесистемных временных каталогов в многопользовательской системе создает некоторые проблемы с правами доступа. На первый взгляд можно подумать, что такие каталоги будут «доступны для записи всем», то есть любой пользователь может записывать или удалять данные в них. Но если бы это было правдой, как вы могли бы предотвратить удаление или изменение пользователем файлов, созданных другим пользователем?
+
+Решение - специальные права доступа, называемое липким битом, которое применяется только к каталогам. Когда этот специальный бит установлен для каталога, он запрещает пользователям удалять или переименовывать файл в этом каталоге, если они не являются владельцем файла.
+
+Каталоги с установленным липким битом отображают `t` вместо `x` в правах доступа остальным пользователям в результате вывода команды `ls -l`. Например, давайте проверим права доступа для каталогов `/tmp` и `/var/tmp`:
+```
+$ ls -ldh /tmp/ /var/tmp/
+drwxrwxrwt 25 root root 4,0K Jun  7 18:52 /tmp/
+drwxrwxrwt 16 root root 4,0K Jun  7 09:15 /var/tmp/
+```
+Как вы можете видеть что `t` заменил `x` на правах доступа для остальных пользователей, в обоих каталогах установлен липкий бит.
+
+Чтобы установить липкий бит в каталоге с помощью `chmod` в числовом режиме, используйте четырехзначную нотацию и `1` в качестве первой цифры. Например:
+```
+$ chmod 1755 temp
+```
+Это установит липкий бит для каталога с именем `temp` и права доступа `rwxr-xr-t`.
+
+При использовании символьного режима используйте параметр `t`. Таким образом, `+t` можно использовать для установки липкого бита, а `-t` - для его снятия. Вот так:
+```
+$ chmod +t temp
+```
+
+
+# Понимание ссылок
+
