Update 104.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
@@ -58,3 +58,55 @@ $ chmod +t temp
 
 # Понимание ссылок
 
+Как уже говорилось ранее, в Linux все представлено в виде файла. Но есть файлы особого типа, называемые ссылками. В ОС Linux существуют два типа ссылок:
+
+Символические ссылки
+    Также называемые мягкими ссылками, они указывают на путь к другому файлу. Если вы удалите файл, на который указывает ссылка (так называемую цель), ссылка все еще будет существовать, но она «перестанет работать», поскольку теперь указывает на «пустоту».
+
+Жесткие ссылки
+    Думайте о жесткой ссылке как о втором имени исходного файла. Это не дубликаты, а дополнительная запись в файловой системе, указывающая на то же место (индексный дескриптор) на диске.
+    
+>*Inode* - это структура данных, в которой хранятся атрибуты объекта (например, файла или каталога) в файловой системе. Среди этих атрибутов - права доступа, владелец и блоки диска, на которых хранятся данные объекта. Думайте об этом как о записи в индексе, отсюда и название, которое происходит от «index node».
+
+## Работа с жесткими ссылками
+### Создание жестких ссылок
+
+Команда для создания жесткой ссылки в Linux - `ln`. Основной синтаксис:
+```
+$ ln TARGET LINK_NAME
+```
+TARGET должна уже существовать (это файл, на который будет указывать ссылка), и если цель не находится в текущем каталоге или если вы хотите создать ссылку в другом месте, вы *должны* указать полный путь к ней. Например, команда:
+```
+$ ln target.txt /home/carol/Documents/hardlink
+```
+создаст файл с именем `hardlink` в каталоге`/home/carol/Documents/`, связанный с файлом `target.txt` в текущем каталоге.
+
+Если вы не укажете последний параметр (`LINK_NAME`), в текущем каталоге будет создана ссылка с тем же именем, что и цель.
+
+### Управление жесткими ссылками
+
+Жесткие ссылки - это записи в файловой системе, которые имеют разные имена, но указывают на одни и те же данные на диске. Все такие имена равны и могут использоваться для обозначения файла. Если вы измените содержимое одного из имен, содержимое всех других имен, указывающих на этот файл, изменится, поскольку все эти имена указывают на одни и те же данные. Если вы удалите одно из имен, другие имена по-прежнему будут работать.
+
+Это происходит потому, что когда вы «удаляете» файл, данные на самом деле не стираются с диска. Система просто удаляет запись в таблице файловой системы, указывающую на индексный дескриптор, соответствующий данным на диске. Но если у вас есть вторая запись, указывающая на тот же индексный дескриптор, вы все равно можете получить доступ к данным. Представьте себе это как две дороги, сходящиеся в одной точке. Даже если вы заблокируете или перенаправите одну из дорог, вы все равно сможете добраться до пункта назначения по другой.
+
+Вы можете проверить это, используя параметр `-i` команды `ls`. Рассмотрим следующее содержимое каталога:
+```
+$ ls -li
+total 224
+3806696 -r--r--r-- 2 carol carol 111702 Jun  7 10:13 hardlink
+3806696 -r--r--r-- 2 carol carol 111702 Jun  7 10:13 target.txt
+```
+Число перед разрешениями - это номер `inode`. Видите, что и жесткая ссылка на файл, и файл `target.txt` имеют одинаковый номер (`3806696`)? Это потому, что первый файл является жесткой ссылкой на другой.
+
+Но какой из них оригинал, а какой - ссылка? Ответа на этот вопрос не сузествует, поскольку для всех практических задач они одинаковы. Обратите внимание, что каждая жесткая ссылка, указывающая на файл, увеличивает количество ссылок файла. Это число видно сразу после прав доступа к файлу в результате вывода команды `ls -l`. По умолчанию каждый файл имеет счетчик ссылок равный 1 (каталоги имеют счетчик равный 2), и каждая жесткая ссылка на него увеличивает счетчик на единицу. Вот почему количество ссылок на файлы в приведенном выше листинге равно 2.
+
+В отличие от символических ссылок, вы можете создавать только жесткие ссылки на обычные файлы, и ссылка и цель должны находиться в одной файловой системе.
+
+### Перемещение и удаление жестких ссылок
+
+Поскольку жесткие ссылки обрабатываются как обычные файлы, их можно удалить с помощью `rm` и переименовать или перемещать по файловой системе с помощью `mv`. А поскольку жесткая ссылка указывает на тот же индекс целевого объекта, ее можно свободно перемещать, не опасаясь «разорвать» ссылку.
+
+## Символические ссылки
+### Создание символических ссылок
+
+
