Update 104.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
@@ -112,4 +112,142 @@ total 224
 ## Символические ссылки
 ### Создание символических ссылок
 
+Команда, используемая для создания символической ссылки, тоже `ln`, но с добавленным параметром `-s`. Вот так:
+```
+$ ln -s target.txt /home/carol/Documents/softlink
+```
+Это создаст файл с именем `softlink` в каталоге `/home/carol/Documents/`, указывающий на файл `target.txt` в текущем каталоге.
+
+Как и в случае жестких ссылок, вы можете опустить имя ссылки, чтобы создать ссылку с тем же именем, что и цель в текущем каталоге.
+
+### Управление символическими ссылками
+
+Символические ссылки указывают на другой путь в файловой системе. Вы можете создавать программные ссылки на файлы и каталоги даже на разных разделах. Определить символическую ссылку в выводе команды `ls` довольно просто:
+```
+$ ls -lh
+total 112K
+-rw-r--r-- 1 carol carol 110K Jun  7 10:13 target.txt
+lrwxrwxrwx 1 carol carol   12 Jun  7 10:14 softlink -> target.txt
+```
+В приведенном выше примере первым символом разрешений для файловой `softlink` является `l`, что указывает на символьную ссылку. Кроме того, сразу после имени файла вы видите имя цели, на которую указывает ссылка, файл `target.txt`.
+
+Обратите внимание, что в списках файлов и каталогов сами программные ссылки всегда показывают права доступа `rwx` для владельца, группы и остальных пользователей, но на практике права доступа для них такие же, как и для цели.
+
+### Перемещение и удаление символических ссылок
+
+Как и жесткие ссылки, символические ссылки можно удалить с помощью `rm` и переместить или переименовать с помощью `mv`. Однако при их создании следует проявлять особую осторожность, чтобы не «разорвать» ссылку, если она перемещается из исходного положения.
+
+При создании символических ссылок вы должны знать, что, если путь не указан полностью, местоположение цели интерпретируется *относительно* местоположения ссылки. Это может создать проблемы при перемещении ссылки или файла, на который она указывает.
+
+Это легче понять на примере. Допустим, у вас есть файл с именем `original.txt` в текущем каталоге, и вы хотите создать на него символическую ссылку под названием `softlink`. Вы можете использовать:
+```
+$ ln -s original.txt softlink
+```
+И, видимо, все будет хорошо. Давайте проверим с помощью `ls`:
+```
+$ ls -lh
+total 112K
+-r--r--r-- 1 carol carol 110K Jun  7 10:13 original.txt
+lrwxrwxrwx 1 carol carol   12 Jun  7 19:23 softlink -> original.txt
+```
+Посмотрите, как построена ссылка: `softlink` указывает на (`→`) `original.txt`. Однако давайте посмотрим, что произойдет, если вы переместите ссылку в предыдущий каталог и попытаетесь отобразить его содержимое с помощью команды `less`:
+```
+$ mv softlink ../
+$ less ../softlink
+../softlink: No such file or directory
+```
+Поскольку путь к файлу `original.txt` не был указан, система предполагает, что он находится в том же каталоге, что и ссылка. Если это не так, ссылка перестает работать.
+
+Способ предотвратить это - всегда указывать полный путь к цели при создании ссылки:
+```
+$ ln -s /home/carol/Documents/original.txt softlink
+```
+Таким образом, независимо от того, куда вы переместите ссылку, она все равно будет работать, потому что она указывает на абсолютное местоположение цели. Проверьте с помощью `ls`:
+```
+$ ls -lh
+total 112K
+lrwxrwxrwx 1 carol carol   40 Jun  7 19:34 softlink -> /home/carol/Documents/original.txt
+```
+
+# Упражнения для закрепления
+
+1. Представьте, что программе нужно создать одноразовый временный файл, который больше никогда не понадобится после закрытия программы. В каком каталоге нужно создать этот файл?
+2. Какой временный каталог необходимо очистить во время загрузки?
+3. Какой параметр у `chmod` в *символьном* режиме позволяет активировать липкий бит в каталоге?
+4. Представьте, что в каталоге `/home/carol/Documents` есть файл с именем `document.txt`. Какая команда создает символьную ссылку на него с именем `text.txt` в текущем каталоге? ln -s /home/carol/Documents/document.txt text.txt
+5. Объясните разницу между жесткой ссылкой на файл и копией этого файла.
+
+
+# Упражнения на размышления
+
+1. Представьте, что внутри каталога вы создаете файл `recipes.txt`. Внутри этого каталога вы также создадите жесткую ссылку на этот файл с именем `receitas.txt` и символическую(*мягкую*) ссылку с именем `rezepte.txt`.
+```
+$ touch recipes.txt
+$ ln recipes.txt receitas.txt
+$ ln -s recipes.txt rezepte.txt
+```
+Содержимое каталога должно быть таким:
+```
+$ ls -lhi
+total 160K
+5388833 -rw-r--r-- 4 carol carol 77K jun 17 17:25 receitas.txt
+5388833 -rw-r--r-- 4 carol carol  0K jun 17 17:25 recipes.txt
+5388837 lrwxrwxrwx 1 carol carol  12 jun 17 17:25 rezepte.txt -> receitas.txt
+```
+Помните, что в качестве жесткой ссылки `receitas.txt` указывает на тот же индекс, который назначен `recipes.txt`. Что произойдет с мягкой ссылкой `rezepte.txt`, если удалить файл `receitas.txt`? Почему?
+
+2. Представьте, что у вас есть флэш-накопитель, подключенный к вашей системе и смонтированный на `/media/youruser/FlashA`. Вы хотите создать ссылку с именем `schematics.pdf` в своем домашнем каталоге, указывающую на файл `esquema.pdf` в корне флеш-накопителя.
+```
+$ ln /media/youruser/FlashA/esquema.pdf ~/schematics.pdf
+```
+Что случилось бы? Почему?
+3. Рассмотрим следующий вывод `ls -lah`:
+```
+$ ls -lah
+total 3,1M
+drwxr-xr-x 2 carol carol 4,0K jun 17 17:27 .
+drwxr-xr-x 5 carol carol 4,0K jun 17 17:29 ..
+-rw-rw-r-- 1 carol carol 2,8M jun 17 15:45 compressed.zip
+-rw-r--r-- 4 carol carol  77K jun 17 17:25 document.txt
+-rw-rw-r-- 1 carol carol 216K jun 17 17:25 image.png
+-rw-r--r-- 4 carol carol  77K jun 17 17:25 text.txt
+```
+* Сколько ссылок указывают на файл `document.txt`?
+* Это мягкие или жесткие ссылки?
+* Какой параметр следует передать команде `ls`, чтобы узнать, какой индексный дескриптор занимает каждый файл?
+4. Представьте, что у вас есть в каталоге `~/Documents` файл с именем `clients.txt`, содержащий имена некоторых клиентов, и каталог с именем `somedir`. Внутри него есть другой файл с разными именами также с именем `clients.txt`. Чтобы воспроизвести эту структуру, используйте следующие команды.
+```
+$ cd ~/Documents
+$ echo "John, Michael, Bob" > clients.txt
+$ mkdir somedir
+$ echo "Bill, Luke, Karl" > somedir/clients.txt
+```
+Затем вы создаете ссылку внутри `somedir` с именем `partners.txt`, указывающую на этот файл, с помощью команд:
+```
+$ cd somedir/
+$ ln -s clients.txt partners.txt
+```
+Итак, структура каталогов такова:
+```
+Documents
+|-- clients.txt
+`-- somedir
+    |-- clients.txt
+    `-- partners.txt -> clients.txt
+```
+Теперь вы переместите файл `partners.txt` из `somedir` в `~/Documents` и перечислите его содержимое.
+```
+$ cd ~/Documents/
+$ mv somedir/partners.txt .
+$ less partners.txt
+```
+Ссылка по-прежнему будет работать? Если да, то в каком файле будет указано его содержимое? Почему?
+
+
+# Ответы на упражнения для закрепления
+
+
+
+# Ответы на упражнения для размышления
+
 
