Update 104.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
@@ -101,7 +101,7 @@ total 224
 ```
 Число перед разрешениями - это номер `inode`. Видите, что и жесткая ссылка на файл, и файл `target.txt` имеют одинаковый номер (`3806696`)? Это потому, что первый файл является жесткой ссылкой на другой.
 
-Но какой из них оригинал, а какой - ссылка? Ответа на этот вопрос не сузествует, поскольку для всех практических задач они одинаковы. Обратите внимание, что каждая жесткая ссылка, указывающая на файл, увеличивает количество ссылок файла. Это число видно сразу после прав доступа к файлу в результате вывода команды `ls -l`. По умолчанию каждый файл имеет счетчик ссылок равный 1 (каталоги имеют счетчик равный 2), и каждая жесткая ссылка на него увеличивает счетчик на единицу. Вот почему количество ссылок на файлы в приведенном выше листинге равно 2.
+Но какой из них оригинал, а какой - ссылка? Ответа на этот вопрос не существует, поскольку для всех практических задач они одинаковы. Обратите внимание, что каждая жесткая ссылка, указывающая на файл, увеличивает количество ссылок файла. Это число видно сразу после прав доступа к файлу в результате вывода команды `ls -l`. По умолчанию каждый файл имеет счетчик ссылок равный 1 (каталоги имеют счетчик равный 2), и каждая жесткая ссылка на него увеличивает счетчик на единицу. Вот почему количество ссылок на файлы в приведенном выше листинге равно 2.
 
 В отличие от символических ссылок, вы можете создавать только жесткие ссылки на обычные файлы, и ссылка и цель должны находиться в одной файловой системе.
 
@@ -242,7 +242,27 @@ $ mv somedir/partners.txt .
 $ less partners.txt
 ```
 Ссылка по-прежнему будет работать? Если да, то в каком файле будет указано его содержимое? Почему?
+5. Рассмотрим следующие файлы:
+```
+-rw-r--r-- 1 carol carol 19 Jun 24 11:12 clients.txt
+lrwxrwxrwx 1 carol carol 11 Jun 24 11:13 partners.txt -> clients.txt
+```
+Какие разрешения на доступ к файлу `partners.txt`? Почему?
 
+
+# Резюме
+
+На этом уроке вы узнали:
+* Где хранятся временные файлы.
+* Какое специальное разрешение на них распространяется.
+* Какие есть ссылки.
+* Разница между символическими и жесткими ссылками.
+* How to create links.
+* Как переместить, переименовать или удалить эти ссылки.
+
+В этом уроке обсуждались следующие команды:
+* `ln`: команда «ссылка». Сама по себе эта команда создает жесткую ссылку. С помощью переключателя `-s` можно создать символическую или программную ссылку. Помните, что жесткие ссылки могут находиться только в одном разделе и файловой системе, а символические ссылки могут перемещаться по разделам и файловым системам (даже к сетевому хранилищу).
+* Параметр `-i` для `ls`, который позволяет просматривать номер inode для файла.
 
 # Ответы на упражнения для закрепления
 
