Update 104.6 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.6 Create and change hard and symbolic links/104.6 Lesson 1.md
@@ -266,8 +266,114 @@ lrwxrwxrwx 1 carol carol 11 Jun 24 11:13 partners.txt -> clients.txt
 
 # Ответы на упражнения для закрепления
 
+1. Представьте, что программе нужно создать одноразовый временный файл, который больше никогда не понадобится после закрытия программы. В каком каталоге нужно создать этот файл?
+>Поскольку после завершения работы программы нас не заботит файл, правильный каталог - / tmp.
+
+2. Какой временный каталог *необходимо* очистить во время загрузки?
+>Это каталог `/run` или, в некоторых системах, `/var/run`.
+
+3. Какой параметр у `chmod` в *символьном* режиме позволяет активировать липкий бит в каталоге?
+>Символ липкого бита в символьном режиме - `t`. Поскольку мы хотим включить (добавить) это право доступа для каталога, параметр должен быть `+t`.
+
+4. Представьте, что в каталоге `/home/carol/Documents` есть файл с именем `document.txt`. Какая команда создает символьную ссылку на него с именем `text.txt` в текущем каталоге? ln -s /home/carol/Documents/document.txt text.txt
+>`ln -s` - это команда для создания символической ссылки. Поскольку вы должны указать полный путь к файлу, на который вы ссылаетесь, команда следующая:
+```
+$ ln -s /home/carol/Documents/document.txt text.txt
+```
+
+5. Объясните разницу между жесткой ссылкой на файл и копией этого файла.
+>Жесткая ссылка - это просто еще одно имя файла. Несмотря на то, что он выглядит как дубликат исходного файла, для всех целей и ссылка, и оригинал одинаковы, поскольку указывают на одни и те же данные на диске. Изменения, внесенные в содержание ссылки, будут отражены в исходной и наоборот. Копия - это полностью независимая сущность, занимающая другое место на диске.
+Изменения копии не будут отражены на оригинале, и наоборот.
 
 
 # Ответы на упражнения для размышления
 
+1. Представьте, что внутри каталога вы создаете файл `recipes.txt`. Внутри этого каталога вы также создадите жесткую ссылку на этот файл с именем `receitas.txt` и символическую(*мягкую*) ссылку с именем `rezepte.txt`.
+```
+$ touch recipes.txt
+$ ln recipes.txt receitas.txt
+$ ln -s recipes.txt rezepte.txt
+```
+Содержимое каталога должно быть таким:
+```
+$ ls -lhi
+total 160K
+5388833 -rw-r--r-- 4 carol carol 77K jun 17 17:25 receitas.txt
+5388833 -rw-r--r-- 4 carol carol  0K jun 17 17:25 recipes.txt
+5388837 lrwxrwxrwx 1 carol carol  12 jun 17 17:25 rezepte.txt -> receitas.txt
+```
+Помните, что в качестве жесткой ссылки `receitas.txt` указывает на тот же индекс, который назначен `recipes.txt`. Что произойдет с мягкой ссылкой `rezepte.txt`, если удалить файл `receitas.txt`? Почему?
+>Мягкая ссылка `rezepte.txt` перестанет работать. Это связано с тем, что программные ссылки указывают на имена, а не на индексы, и имя `receitas.txt` больше не существует, даже если данные все еще находятся на диске под именем `recipes.txt`.
 
+2. Представьте, что у вас есть флэш-накопитель, подключенный к вашей системе и смонтированный на `/media/youruser/FlashA`. Вы хотите создать ссылку с именем `schematics.pdf` в своем домашнем каталоге, указывающую на файл `esquema.pdf` в корне флеш-накопителя.
+```
+$ ln /media/youruser/FlashA/esquema.pdf ~/schematics.pdf
+```
+Что будет в результате? Почему?
+>Команда не удалась. Сообщение об ошибке будет `Invalid cross-device link`, и это объясняет причину: жесткие ссылки не могут указывать на цель в другом разделе или устройстве. Единственный способ создать такую ссылку - использовать символическую или мягкую ссылку, добавив параметр `-s` к `ln`.
+
+
+3. Рассмотрим следующий вывод `ls -lah`:
+```
+$ ls -lah
+total 3,1M
+drwxr-xr-x 2 carol carol 4,0K jun 17 17:27 .
+drwxr-xr-x 5 carol carol 4,0K jun 17 17:29 ..
+-rw-rw-r-- 1 carol carol 2,8M jun 17 15:45 compressed.zip
+-rw-r--r-- 4 carol carol  77K jun 17 17:25 document.txt
+-rw-rw-r-- 1 carol carol 216K jun 17 17:25 image.png
+-rw-r--r-- 4 carol carol  77K jun 17 17:25 text.txt
+```
+* Сколько ссылок указывают на файл `document.txt`?
+>Каждый файл начинается со счетчика ссылок равным 1. Поскольку счетчик ссылок для файла равен 4, есть три ссылки, указывающие на этот файл.
+* Это мягкие или жесткие ссылки?
+>Это жесткие ссылки, поскольку мягкие ссылки не увеличивают количество ссылок файла.
+* Какой параметр следует передать команде `ls`, чтобы узнать, какой индексный дескриптор занимает каждый файл?
+>Параметр `-i`. Inode будет отображаться как первый столбец в результате вывода `ls`, как показано ниже:
+```
+$ ls -lahi
+total 3,1M
+5388773 drwxr-xr-x 2 carol carol 4,0K jun 17 17:27 .
+5245554 drwxr-xr-x 5 carol carol 4,0K jun 17 17:29 ..
+5388840 -rw-rw-r-- 1 carol carol 2,8M jun 17 15:45 compressed.zip
+5388833 -rw-r--r-- 4 carol carol  77K jun 17 17:25 document.txt
+5388837 -rw-rw-r-- 1 carol carol 216K jun 17 17:25 image.png
+5388833 -rw-r--r-- 4 carol carol  77K jun 17 17:25 text.txt
+```
+4. Представьте, что у вас есть в каталоге `~/Documents` файл с именем `clients.txt`, содержащий имена некоторых клиентов, и каталог с именем `somedir`. Внутри него есть другой файл с разными именами также с именем `clients.txt`. Чтобы воспроизвести эту структуру, используйте следующие команды.
+```
+$ cd ~/Documents
+$ echo "John, Michael, Bob" > clients.txt
+$ mkdir somedir
+$ echo "Bill, Luke, Karl" > somedir/clients.txt
+```
+Затем вы создаете ссылку внутри `somedir` с именем `partners.txt`, указывающую на этот файл, с помощью команд:
+```
+$ cd somedir/
+$ ln -s clients.txt partners.txt
+```
+Итак, структура каталогов такова:
+```
+Documents
+|-- clients.txt
+`-- somedir
+    |-- clients.txt
+    `-- partners.txt -> clients.txt
+```
+Теперь вы переместите файл `partners.txt` из `somedir` в `~/Documents` и перечислите его содержимое.
+```
+$ cd ~/Documents/
+$ mv somedir/partners.txt .
+$ less partners.txt
+```
+Ссылка по-прежнему будет работать? Если да, то в каком файле будет указано его содержимое? Почему?
+>Это «хитрый» вариант, но ссылка будет работать, и в списке будет файл в `~/Documents`, содержащий имена `John`, `Michael`, `Bob`. Помните, что, поскольку вы не указали полный путь к целевому `client.txt` при создании мягкой ссылки `partners.txt`, целевое местоположение будет интерпретироваться как относящееся к местоположению ссылки, которым в данном случае является текущий каталог. Если ссылку переместить из `~/Documents/somedir` в `~/Documents`, она перестанет работать, поскольку цель больше не будет находиться в том же каталоге, что и ссылка. Однако так уж случилось, что в `~/Documents` есть файл с именем `clients.txt`, поэтому ссылка будет указывать на этот файл, а не на исходную цель внутри `~/somedir`.
+>Чтобы этого избежать, всегда указывайте полный путь к цели при создании символической ссылки.
+
+5. Рассмотрим следующие файлы:
+```
+-rw-r--r-- 1 carol carol 19 Jun 24 11:12 clients.txt
+lrwxrwxrwx 1 carol carol 11 Jun 24 11:13 partners.txt -> clients.txt
+```
+Какие разрешения на доступ к файлу `partners.txt`? Почему?
+>Права доступа к файлам `partners.txt`: `rw-r-- r--`, поскольку ссылки всегда наследуют те же права доступа, что и цель.
