Update 104.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.7 Find system files and place files in the correct location/104.7 Lesson 1.md
@@ -10,4 +10,51 @@
 
 # Введение
 
-Дистрибутивы Linux бывают самых разных форм и размеров, но почти все они разделяют то, что они следуют Стандарту иерархии файловой системы (FHS), который определяет «стандартный макет» для файловой системы,
+Дистрибутивы Linux бывают самых разных форм и размеров, но почти всех их объединяет то, что они следуют Стандарту иерархии файловой системы (FHS), который определяет «стандартную структуру» для файловой системы, значительно упрощая взаимодействие и системное администрирование. В этом уроке вы узнаете больше об этом стандарте и о том, как искать файлы в системе Linux
+
+
+# Стандарт иерархии файловой системы
+
+Стандарт иерархии файловой системы (FHS) - это попытка Linux Foundation стандартизировать структуру каталогов и их содержимое в системах Linux. Соответствие стандарту не является обязательным, но большинство дистрибутивов следуют ему.
+
+>Те, кто интересуется деталями организации файловой системы, могут прочитать спецификацию FHS 3.0, доступную в нескольких форматах по адресу: http://refspecs.linuxfoundation.org/fhs.shtml
+
+Согласно стандарту, основная структура каталогов следующая:
+
+`/`
+
+`/bin`
+
+`/boot`
+
+`/dev`
+
+`/etc`
+
+`home`
+
+`/lib`
+
+`/media`
+
+`/mnt`
+
+`/opt`
+
+`/root`
+
+`/run`
+
+`/sbin`
+
+`/srv`
+
+`/tmp`
+
+`/usr`
+
+`/proc`
+
+`/var`
+
+Имейте в виду, что некоторые из этих каталогов, например `/etc`, `/usr` и `/var`, содержат целую иерархию подкаталогов внутри них.
